test/Test/Compile/Error/NetworkErrors/multidimInputTensor.vcl
network f : Tensor Rat [1, 2] -> Rat